--- a/.env
+++ b/.env
@@ -1,1 +1,4 @@
+✅ ✔️ 🔴
 PORT=4001
+JWT_SECRET=secret
+LOCAL_MONGO_DB="mongodb://127.0.0.1:27017/eventsApp?directConnection=true&serverSelectionTimeoutMS=2000&appName=mongosh+2.3.8"
