--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@graphql-tools/schema": "^8.3.1",
     "apollo-server-core": "^3.6.3",
     "apollo-server-express": "^3.6.3",
+    "bcrypt": "^6.0.0",
     "bcryptjs": "^2.4.3",
     "dotenv": "^10.0.0",
     "express": "^4.17.3",
