--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
 ✅ ✔️ 🔴
-PORT=4001
+PORT=4000
 JWT_SECRET=secret
 LOCAL_MONGO_DB="mongodb://127.0.0.1:27017/eventsApp?directConnection=true&serverSelectionTimeoutMS=2000&appName=mongosh+2.3.8"
+APP_URL="http://localhost:3000"
